--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -4,16 +4,16 @@ const { pageTitle = 'Componentrs', description = '' } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es-AR">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0"
+      content="width=device-width"
     />
     <link
       rel="icon"
-      href="/lumau-css-animations/favicon-32x32.png"
+      href="/lumau-css-animations/favicon.svg"
       type="image/x-icon"
     />
     <meta
