--- a/src/pages/imagenes/index.astro
+++ b/src/pages/imagenes/index.astro
@@ -9,18 +9,19 @@ const boxes = [
       'Aumenta el tamaño de las imágenes al ingresar en pantalla (scroll). No soportado por todos los navegadores',
     linkTo: 'ingresando-en-pantalla',
   },
-  // {
-  //   id: 2,
-  //   title: 'Texto en 3D',
-  //   description: 'Genera efecto 3D utilizando sombras',
-  //   linkTo: 'texto-3d',
-  // },
-  // {
-  //   id: 3,
-  //   title: 'Máquina de escribir',
-  //   description: 'Efecto máquina de escribir monospace',
-  //   linkTo: 'maquina-de-escribir',
-  // },
+  {
+    id: 2,
+    title: 'galeria-destacada.astro',
+    description:
+      'Galería de imágenes. Destaca una imagen por vez a través del hover.',
+    linkTo: 'galeria-destacada',
+  },
+  //  {
+  //    id: 3,
+  //    title: 'Máquina de escribir',
+  //    description: 'Efecto máquina de escribir monospace',
+  //    linkTo: 'maquina-de-escribir',
+  //  },
 ];
 ---
 
