--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -34,3 +34,5 @@ const { pageTitle = 'Componentrs', description = '' } = Astro.props;
     <!-- <Footer /> -->
   </body>
 </html>
+
+<script src="/src/components/prism/prism.js"></script>
