--- a/src/pages/imagenes/index.astro
+++ b/src/pages/imagenes/index.astro
@@ -1,4 +1,5 @@
 ---
+import Card from '../../components/Card/Card.astro';
 import Layout from '../../layout/Layout.astro';
 
 const boxes = [
@@ -11,17 +12,23 @@ const boxes = [
   },
   {
     id: 2,
-    title: 'galeria-destacada.astro',
+    title: 'galeria-destacada',
     description:
       'Galería de imágenes. Destaca una imagen por vez a través del hover.',
     linkTo: 'galeria-destacada',
   },
-  //  {
-  //    id: 3,
-  //    title: 'Máquina de escribir',
-  //    description: 'Efecto máquina de escribir monospace',
-  //    linkTo: 'maquina-de-escribir',
-  //  },
+  {
+    id: 3,
+    title: 'Efecto fade in',
+    description: 'Fade in para imágenes, solo css',
+    linkTo: 'fade-in',
+  },
+  {
+    id: 4,
+    title: 'Texto sobre imagen',
+    description: 'Capa y texto sobre imagen al realizar hover',
+    linkTo: 'image-hover-text',
+  },
 ];
 ---
 
@@ -33,25 +40,7 @@ const boxes = [
     <section
       class="flex flex-grow flex-row flex-wrap gap-4 justify-center items-center mt-8"
     >
-      {
-        boxes.map((box) => (
-          <div class="inline-block p-4 border border-solid border-gray-600 rounded max-w-[300px] min-h-[80px] shadow-lg shadow-gray-700/50">
-            <p class="text-center pb-2">{box.title}</p>
-            <hr />
-
-            <p class="py-4">{box.description}</p>
-
-            <div class="flex justify-evenly pt-4">
-              <a
-                href={`/lumau-css-animations/imagenes/${box.linkTo}`}
-                class="p-2 hover:bg-gray-800 rounded-full"
-              >
-                Ver detalle
-              </a>
-            </div>
-          </div>
-        ))
-      }
+      {boxes.map((box) => <Card box={box} />)}
     </section>
   </main>
 </Layout>
