--- a/src/pages/texto/index.astro
+++ b/src/pages/texto/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../../layout/Layout.astro';
+import Card from '../../components/Card/Card.astro';
 
 const boxes = [
   {
@@ -20,6 +21,12 @@ const boxes = [
     description: 'Efecto máquina de escribir monospace',
     linkTo: 'maquina-de-escribir',
   },
+  {
+    id: 4,
+    title: 'Olas en texto',
+    description: 'Efecto wave adentro de un texo',
+    linkTo: 'olas-en-texto',
+  },
 ];
 ---
 
@@ -31,25 +38,7 @@ const boxes = [
     <section
       class="flex flex-grow flex-row flex-wrap gap-4 justify-center items-center mt-8"
     >
-      {
-        boxes.map((box) => (
-          <div class="inline-block p-4 border border-solid border-gray-600 rounded max-w-[300px] min-h-[80px] shadow-lg shadow-gray-700/50">
-            <p class="text-center pb-2">{box.title}</p>
-            <hr />
-
-            <p class="py-4">{box.description}</p>
-
-            <div class="flex justify-evenly pt-4">
-              <a
-                href={`/lumau-css-animations/texto/${box.linkTo}`}
-                class="p-2 hover:bg-gray-800 rounded-full"
-              >
-                Ver detalle
-              </a>
-            </div>
-          </div>
-        ))
-      }
+      {boxes.map((box) => <Card box={box} />)}
     </section>
   </main>
 </Layout>
