--- a/src/pages/imagenes/index.astro
+++ b/src/pages/imagenes/index.astro
@@ -29,6 +29,12 @@ const boxes = [
     description: 'Capa y texto sobre imagen al realizar hover',
     linkTo: 'image-hover-text',
   },
+  {
+    id: 5,
+    title: 'Slider - Galería de imágenes',
+    description: 'Galería de imágenes, slider solo con CSS',
+    linkTo: 'galeria-slider',
+  },
 ];
 ---
 
