--- a/src/pages/imagenes/fade-in.astro
+++ b/src/pages/imagenes/fade-in.astro
@@ -31,6 +31,9 @@ const styles = `
   description="Black Wing optimiza tus Finanzas con Profesionales. Nuestros asesores financieros están aquí para ayudarlo. Ingresa y comunícate con nuestro equipo"
 >
   <main>
+    <h1 class="text-slate-200 text-center text-3xl pt-4">
+      Fade in para imágenes, solo css
+    </h1>
     <img
       src="/lumau-css-animations/images/imagen6.jpg"
       alt="Imagen aleatoria 1"
