--- a/src/components/Menu/Menu.astro
+++ b/src/components/Menu/Menu.astro
@@ -44,14 +44,13 @@
       >Botones</a
     >
     <a
-      href="/lumau-css-animations/degradados/"
+      href="/lumau-css-animations/heros/"
       class={`${
-        Astro.url.pathname.replaceAll('/', '') ===
-        '/lumau-css-animationsdegradados'
+        Astro.url.pathname.replaceAll('/', '') === '/lumau-css-animationsheros'
           ? 'text-teal-400'
           : ''
       } menu__item anim__bottom to__center`}
-      >Degradados</a
+      >Heros</a
     >
     <!-- <a
       href="/lumau-css-animations/contact/"
