--- a/src/pages/texto/index.astro
+++ b/src/pages/texto/index.astro
@@ -38,7 +38,14 @@ const boxes = [
     <section
       class="flex flex-grow flex-row flex-wrap gap-4 justify-center items-center mt-8"
     >
-      {boxes.map((box) => <Card box={box} />)}
+      {
+        boxes.map((box) => (
+          <Card
+            section="texto"
+            box={box}
+          />
+        ))
+      }
     </section>
   </main>
 </Layout>
