--- a/src/pages/heros/index.astro
+++ b/src/pages/heros/index.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from '../../layout/Layout.astro';
+import Card from '../../components/Card/Card.astro';
 
 const boxes = [
   {
     id: 1,
-    title: 'Ingreso en pantalla',
-    description:
-      'Aumenta el tamaño de las imágenes al ingresar en pantalla (scroll). No soportado por todos los navegadores',
-    linkTo: 'ingresando-en-pantalla',
+    title: 'Hero básico',
+    description: 'Sección hero con fondo, imagen, texto y botón cta',
+    linkTo: 'hero-basico',
   },
   // {
   //   id: 2,
@@ -34,21 +34,10 @@ const boxes = [
     >
       {
         boxes.map((box) => (
-          <div class="inline-block p-4 border border-solid border-gray-600 rounded max-w-[300px] min-h-[80px] shadow-lg shadow-gray-700/50">
-            <p class="text-center pb-2">{box.title}</p>
-            <hr />
-
-            <p class="py-4">{box.description}</p>
-
-            <div class="flex justify-evenly pt-4">
-              <a
-                href={`/lumau-css-animations/texto/${box.linkTo}`}
-                class="p-2 hover:bg-gray-800 rounded-full"
-              >
-                Ver detalle
-              </a>
-            </div>
-          </div>
+          <Card
+            section="heros"
+            box={box}
+          />
         ))
       }
     </section>
