--- a/src/pages/heros/index.astro
+++ b/src/pages/heros/index.astro
@@ -9,12 +9,13 @@ const boxes = [
     description: 'Sección hero con fondo, imagen, texto y botón cta',
     linkTo: 'hero-basico',
   },
-  // {
-  //   id: 2,
-  //   title: 'Texto en 3D',
-  //   description: 'Genera efecto 3D utilizando sombras',
-  //   linkTo: 'texto-3d',
-  // },
+  {
+    id: 2,
+    title: 'Hero backgorung img degradada',
+    description:
+      'Hero con imagen de fondo y una capa semitransparente con degradado',
+    linkTo: 'background-img-degradada',
+  },
   // {
   //   id: 3,
   //   title: 'Máquina de escribir',
