--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -36,3 +36,14 @@ const { pageTitle = 'Componentrs', description = '' } = Astro.props;
 </html>
 
 <script src="/src/components/prism/prism.js"></script>
+
+<style>
+  @tailwind base;
+  @tailwind components;
+  @tailwind utilities;
+
+  html {
+    max-width: 1600px;
+    margin: 0 auto;
+  }
+</style>
