--- a/src/pages/imagenes/index.astro
+++ b/src/pages/imagenes/index.astro
@@ -35,6 +35,19 @@ const boxes = [
     description: 'Galería de imágenes, slider solo con CSS',
     linkTo: 'galeria-slider',
   },
+  {
+    id: 6,
+    title: 'Cambia imagen infinito automático',
+    description:
+      'Cambia la imagen de un contenedor automáticamente con efecto opacity',
+    linkTo: 'cambiando-imagenes',
+  },
+  {
+    id: 7,
+    title: 'Comparación de imágenes',
+    description: 'Componente de Google para comparar imágenes superpuestas.',
+    linkTo: 'comparacion-de-imagenes',
+  },
 ];
 ---
 
